syntax = "proto3";

package kafka;

message KafkaMessage {
  string trace_id = 1;
  int32 event_type = 2;
  bytes message = 3;
}
